--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
     <!--footer-->
     <footer class="center">
-        <span>Creaeted By <a href="#">@Hansh Raj</a> </span>
+        <span>Created By <a href="#">@Hansh Raj</a> </span>
     </footer>
 
 
